[package]
name = "dagon"
version = "0.0.1"
authors = ["LevitatingBusinessMan <public@reinfernhout.xyz>"]
edition = "2018"

[lib]
name = "dagon_lib"
path = "src/lib/lib.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[[bin]]
name = "client"
path = "src/client/main.rs"

[dependencies]
sled = {version = "0.34.6", features = ["compression"]}
sequoia-openpgp = {git = "https://gitlab.com/sequoia-pgp/sequoia.git", branch="main"}
anyhow = "1.0.38"
lazy_static = "1.4.0"
backtrace = "0.3"
chrono = "0.4.19"
